# Physica

./: .gitignore  README.md  meson.build  physica.cpp  physica.hpp  physica_test.cpp
.cache/clangd/index/: args-test.cc.E043D15572E6E276.idx  args.h.B240A08838089F8A.idx  assert-test.cc.6072EF3CC5DFA76F.idx  body.cpp.926C563194DB5705.idx  body.hpp.86B7384295688CC6.idx  chrono-test.cc.105A6CEE5F8EDE3B.idx  chrono.h.6AFDD862A1DCFC64.idx  chunck.cpp.3C003C939118DE65.idx  chunck.hpp.215D65A5E39F51D8.idx  color-test.cc.0EAD280F90F7E916.idx  color.h.33E38F13DF77467B.idx  compile-fp-test.cc.6B49C520BDD6FFE4.idx  compile-test.cc.FDD584B534331B69.idx  compile.h.D61A87F6B9079656.idx  core-test.cc.7B709814F4FBD9A1.idx  core.h.EF6F70B61C4D50D8.idx  debug.hpp.5234202A9B16F8FB.idx  enforce-checks-test.cc.84D0F36EFBA70A42.idx  erroneous.hpp.79149BB8C91379CC.idx  format-impl-test.cc.A308C2DA8C06F95E.idx  format-inl.h.02DE3061977B5282.idx  format-test.cc.B36D804E772736BF.idx  format.cc.258EA91C1892301E.idx  format.h.2E82BF165E1B9F2E.idx  gmock-gtest-all.cc.C9E8A72E3A712BA8.idx  gmock.h.318143F501123AAD.idx  gtest-extra-test.cc.C102BDD838428254.idx  gtest-extra.cc.13CD54A8FA34C529.idx  gtest-extra.h.85DC879D22E9F98E.idx  gtest-spi.h.E290802E2F4AC9D3.idx  gtest.h.913775604452AF59.idx  header-only-test.cc.215C6F8741FF63DA.idx  line.hpp.C90DE7FC1843D167.idx  math.hpp.F07D86ABDF39AA8B.idx  os-test.cc.67BB6357137FC089.idx  (+36 more)
include/: body.hpp  chunck.hpp  world.hpp
include/math/: line.hpp  polygon.hpp  vec2.hpp  vec3.hpp
include/triggers/: trigger.hpp
src/: body.cpp  chunck.cpp  world.cpp
